[tool.poetry]
name = "pyaltherma"
version = "0.0.9"
description = "Python scripts for controlling Daikin Altherma heat pump."
readme = "README.md"
authors = ["Tadas Danielius"]
license = "MIT"
homepage = "https://github.com/tadasdanielius/pyaltherma"
repository = "https://github.com/tadasdanielius/pyaltherma"
keywords = ["daikin", "altherma", "heatpump"]
classifiers = ["Development Status :: 3 - Alpha"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
