[tool.poetry]
name = "pyaltherma"
version = "0.0.19"
description = "Python scripts for controlling Daikin Altherma heat pump using BRP069A62 LAN adapter."
readme = "README.md"
authors = ["Tadas Danielius"]
license = "MIT"
homepage = "https://github.com/tadasdanielius/pyaltherma"
repository = "https://github.com/tadasdanielius/pyaltherma"
keywords = ["daikin", "altherma", "heatpump", "brp069A62", 'brp069A61']
classifiers = ["Development Status :: 3 - Alpha"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
